Add CMA equalizer, configurable BCH threshold, and LFD simulcast decode improvements
- CMA blind adaptive equalizer for LSMv2: gear-shift mu (acq=0.003, trk=0.001)
  improves LFD +313% LDUs and ROC W +69% LDUs
- BCH threshold now user-configurable per channel (1-11, default 5) via UI spinner
  instead of hardcoded T=5, enabling per-channel tuning for different simulcast severity
- ROC W investigation confirms CMA+T=11 yields +30% STT words over baseline;
  T=5 over-filters for moderate simulcast when CMA is active

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>